--- a/src/default.css
+++ b/src/default.css
@@ -1808,12 +1808,12 @@ div.pikchr-wrapper.indent.source.source-inline{
 div.pikchr-wrapper.float-left:not(.source),
 div.pikchr-wrapper.float-left.source.source-inline {
   float: left;
-  padding: 4em;
+  padding: 1em 2em;
 }
 div.pikchr-wrapper.float-right:not(.source),
 div.pikchr-wrapper.float-right.source.source-inline{
   float: right;
-  padding: 4em;
+  padding: 1em 2em;
 }
 
 /* For pikchr-wrapper.source mode, toggle pre.pikchr-src and
