--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -464,7 +464,8 @@ body.chat .chat-view {
 }
 body.chat #chat-config,
 body.chat #chat-search,
-body.chat #chat-preview {
+body.chat #chat-preview,
+body.chat #chat-zoom {
   /* /chat configuration widget */
   display: flex;
   flex-direction: column;
@@ -473,6 +474,9 @@ body.chat #chat-preview {
   margin: 0;
   align-items: stretch;
   min-height: 6em;
+}
+body.chat #chat-zoom {
+  justify-content: space-between;
 }
 body.chat #chat-config #chat-config-options {
   /* /chat config options go here */
