--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -478,6 +478,16 @@ body.chat #chat-zoom {
 body.chat #chat-zoom {
   justify-content: space-between;
 }
+body.chat #chat-zoom-content {
+  display: flex;
+  overflow: auto;
+}
+body.chat #chat-zoom-content > .message-widget {
+  flex-grow: 1;
+}
+body.chat #chat-zoom-content > .message-widget .message-widget-content {
+  width: 100%;
+}
 body.chat #chat-config #chat-config-options {
   /* /chat config options go here */
   flex: 1 1 auto;
