Tapping the Zoom button on a zoomed messages now unzooms it (same as the Close Zoom button).
FossilOrigin-Name: 24e050a0be0e07c0bb22c042cd77f93109fa3315c4abba4caf995455e8af4f6b

--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -485,7 +485,7 @@ body.chat #chat-zoom-content {
 body.chat #chat-zoom-content > .message-widget {
   flex-grow: 1;
 }
-body.chat #chat-zoom-content > .message-widget .message-widget-content {
+body.chat #chat-zoom-content > .message-widget > .message-widget-content {
   width: 100%;
 }
 body.chat #chat-config #chat-config-options {
