The various /chat Delete buttons misinteract with zoom mode's moving-around of the message widget within the DOM, so hide those buttons in zoom mode.
FossilOrigin-Name: 1c750076278c945c5790460a41b0f61cd1da4ea999ef6daad455a1f822704d5a

--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -488,6 +488,14 @@ body.chat #chat-zoom-content > .message-widget {
 body.chat #chat-zoom-content > .message-widget > .message-widget-content {
   width: 100%;
 }
+body.chat #chat-zoom-content > .message-widget .toolbar.hide-in-zoom {
+  /* The various Delete buttons misinteract with zoom mode's moving-around
+     of message widgets, so hide them in zoom mode. */
+  position: absolute !important;
+  opacity: 0 !important;
+  pointer-events: none !important;
+  display: none !important;
+}
 body.chat #chat-config #chat-config-options {
   /* /chat config options go here */
   flex: 1 1 auto;
