--- a/src/default.css
+++ b/src/default.css
@@ -1897,11 +1897,10 @@ code, kbd, pre, samp, tt, var,
     tr.diffskip > td.chunkctrl,
     #fossil-status-bar,
     .monospace {
-  font-family: "Source Code Pro", "Menlo", "Monaco", "Consolas",
-               "Andale Mono", "Ubuntu Mono", "Deja Vu Sans Mono",
-               "Letter Gothic", "Letter Gothic Std", "Prestige Elite Std",
-               "Courier", "Courier New",
-               monospace;
+  font-family: "MesloLGSDZ Nerd Font Mono",     /* 2025 hotness */
+               "Source Code Pro",               /* 2012 hotness */
+               "Menlo", "Monaco", "SF Mono",    /* Safari reverted to Courier in 2022 */
+               monospace;                       /* let OS/browser default take over */
 }
 
 div.markdown > ol.footnotes {
