--- a/src/default.css
+++ b/src/default.css
@@ -1978,6 +1978,21 @@ div.markdown span.notescope:target {
   border-bottom: 2px solid gold;
 }
 
+/* Cause <dd> elements to be aligned complete to the
+** right of their <dt> on help pages. */
+dl.helpOptions {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  column-gap: 1rem;
+}
+dl.helpOptions > dt {
+  grid-column: 1;
+}
+dl.helpOptions > dd {
+  grid-column: 2;
+  margin: 0;
+}
+
 /* Objects in the "desktoponly" class are invisible on mobile */
 @media screen and (max-width: 600px) {
   .desktoponly {
