Reduce the amount of indentation on option-lists in the one-line help.
FossilOrigin-Name: 9432ea9085c61c9a2454c09c2e7cd4285bbff995bf88211ad11565f3b629f780

--- a/src/default.css
+++ b/src/default.css
@@ -1992,6 +1992,9 @@ dl.helpOptions > dd {
   grid-column: 2;
   margin: 0;
 }
+div.helpPage blockquote {
+  margin-left: 0.2em;
+}
 
 /* Objects in the "desktoponly" class are invisible on mobile */
 @media screen and (max-width: 600px) {
