--- a/src/default.css
+++ b/src/default.css
@@ -1233,7 +1233,7 @@ button.copy-button:disabled span {
   display: inline-block;
 }
 .accordion_panel {
-  overflow: hidden;
+  overflow-y: clip;
   transition: max-height 0.25s ease-out;
 }
 .error {
